[package]
name = "kru"
version = "0.0.1"
edition = "2021"
authors = ["Pal Mezei <sirpalee@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
description = "Scalable game engine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
